Fixed overflow of code snippets

--- a/src/stylesheets/basics.less
+++ b/src/stylesheets/basics.less
@@ -117,6 +117,9 @@ input {
   font-size: 14px;
   color: #505050;
 }
+pre {
+  overflow: auto;
+}
 pre code {
   color: #fff;
 }
